# OceanDB

./: .env.example  .gitignore  AlongTrack.py  Installation.md  Makefile  README.md  basin_connections_for_load.csv  config.example.yaml  copernicus_along_to_csv.py  copernicus_download_netcdf_data.py  copernicus_upload_csv_along.py  copernicus_upload_netcdf.py  copernicus_upload_netcdf_to_duckdb.py  create_along_track_db.py  create_along_track_db2.py  docker-compose.postgres.yml  docker-compose.yml  eddy_duckdb.db  insert_data_performance_test.py  requirements.txt
OceanDB/: pyproject.toml
OceanDB/old/: AlongTrack.py  Eddy.py  download_copernicus_data.py  logger.py  login.py
OceanDB/old/old/: MOceanDB.py
OceanDB/src/OceanDB/: AlongTrack.py  Eddy.py  MOceanDB.py  OceanDB.py  OceanDB_Copernicus.py  OceanDB_ETL.py  OceanDB_Initializer.py  cli.py  config.py  download_data.py  get_engine.py  load_data.py
OceanDB/src/OceanDB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
OceanDB/src/OceanDB/data/basins/: ocean_basins.csv
OceanDB/src/OceanDB/sql/: create_along_track_index_date.sql  create_along_track_index_filename.sql  create_along_track_index_mission.sql  create_along_track_index_point_date_mission_basin.sql  create_along_track_index_point_geom.sql  create_along_track_index_time.sql  create_along_track_table.sql
OceanDB/src/OceanDB/sql/drop/: drop_along_track_index_basin.sql  drop_along_track_index_mission.sql  drop_along_track_index_point_date_mission_basin.sql  drop_along_track_index_point_geom.sql
OceanDB/src/OceanDB/tests/: test_geographic_nearest_neighbor.py  test_spatiotemporal_queries.py
OceanDB/src/OceanDB/utils/: projections.py
(+161 files in other folders)
